--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
     	<artifactId>hibernate-validator</artifactId>
     	<version>5.2.4.Final</version>
 	</dependency>
-	
+	<dependency>
+    	<groupId>javax.validation</groupId>
+    	<artifactId>validation-api</artifactId>
+    	<version>1.1.0.Final</version>
+    </dependency>
 	
 	<dependency>
 	    <groupId>jstl</groupId>
@@ -108,11 +112,35 @@
 	    <version>1.2</version>
 	</dependency>
 	
-	   
-
+	<dependency>
+    	<groupId>org.glassfish.web</groupId>
+    	<artifactId>jstl-impl</artifactId>
+    	<version>1.2</version>
+    </dependency>
     
+<!-- 文件上传	 -->
+    <dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.5</version>
+    </dependency>
+    <dependency>
+    	<groupId>commons-fileupload</groupId>
+    	<artifactId>commons-fileupload</artifactId>
+    	<version>1.3.2</version>
+    </dependency>	   
+
+<!-- 分页用 -->
+	<dependency>
+	    <groupId>jsptags</groupId>
+	    <artifactId>pager-taglib</artifactId>
+	    <version>2.0</version>
+	</dependency>   
   </dependencies>
+  
   <build>
     <finalName>cms-main</finalName>
   </build>
+  
+  
 </project>
