--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 	
 	<servlet-mapping>  
 	    <servlet-name>springmvc4</servlet-name>  
-	    <url-pattern>api/*</url-pattern>  
+	    <url-pattern>/</url-pattern>  
 	</servlet-mapping> 
 	
 </web-app>
