--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,20 @@
 	    <artifactId>pager-taglib</artifactId>
 	    <version>2.0</version>
 	</dependency>   
+
+<!-- json配置-->	
+	<dependency>  
+	    <groupId>com.fasterxml.jackson.core</groupId>  
+	    <artifactId>jackson-core</artifactId>  
+	    <version>2.5.2</version>  
+	</dependency>  
+	  
+	<dependency>  
+	    <groupId>com.fasterxml.jackson.core</groupId>  
+	    <artifactId>jackson-databind</artifactId>  
+	    <version>2.5.2</version>  
+	</dependency>
+	
   </dependencies>
   
   <build>
