--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app > 
 
-	<display-name>SpringMVC_01_HelloWorld</display-name>
+	<display-name>cms-main</display-name>
 	
   <welcome-file-list>  
-    <welcome-file>/index.html</welcome-file>  
-    <welcome-file>/index.jsp</welcome-file>  
+    <welcome-file>index.html</welcome-file>  
   </welcome-file-list> 
   	
 <context-param>
