--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   </welcome-file-list> 
   <error-page>
     <error-code>404</error-code>
-    <location>/index.html</location>
+    <location>/error404.html</location>
 </error-page>
   	
 <context-param>
