--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
-encoding//src/main/webapp/WEB-INF/front/admin/js/login.js=UTF-8
+encoding//src/main/webapp/WEB-INF/front/admin/login.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
