--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,12 @@
 	    <artifactId>jackson-databind</artifactId>  
 	    <version>2.5.2</version>  
 	</dependency>
-	
+
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.5.2</version>
+	</dependency>
   </dependencies>
   
   <build>
