--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,15 @@
 		<artifactId>jackson-annotations</artifactId>
 		<version>2.5.2</version>
 	</dependency>
+	
+	
+	<!-- ftp工具 -->
+	<dependency>
+	    <groupId>commons-net</groupId>
+	    <artifactId>commons-net</artifactId>
+	    <version>3.3</version>
+	</dependency>
+	
   </dependencies>
   
   <build>
