--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,5 +10,7 @@ encoding//src/main/webapp/WEB-INF/front/html/old/navigation.html=UTF-8
 encoding//src/main/webapp/WEB-INF/front/test/css/basic.css=UTF-8
 encoding//src/main/webapp/WEB-INF/front/test/css/index.css=UTF-8
 encoding//src/main/webapp/WEB-INF/front/test/css/list.css=UTF-8
+encoding//src/main/webapp/WEB-INF/front/user/sidebar.html=UTF-8
+encoding//src/main/webapp/WEB-INF/front/user/sidebar2.html=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
